--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  background-color: rgb(62, 95, 203);
+  height:100vh;
   }
+
+header{
+  width: 100vw;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main{
+  display:flex;
+}
+
+.projects{
+  height:60vh;
+  width: 95vw;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  border: rgb(62, 255, 9) solid 1px;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.project{
+  width:40vw;
+  height: 25vh;
+  border: black solid 1px;
 }
