--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,68 @@
 .App {
   text-align: center;
-  background-color: rgb(39, 112, 230);
+  background-color: #041424;
   height:280vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  color:#ECFEFF ;
+  text-shadow: 0 0 6px #0A1A36, 0 0 8px #0A1A36;
   }
 
 header{
-  width: 100vw;
-
+  width: 90vw;
+  height: 15vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  background-image: linear-gradient(to right, #0069D7, #203353,#2B3542);
 }
 
 section{
-  height:50vh;
-  width: 95vw;
+  height:300px;
+  width: 1200px;
   display: flex;
-
+  background-color:#0069D7 ;
   align-items: center;
   justify-content: space-around;
   border: rgb(20, 236, 239) solid 1px;
+}
+
+h3{
+  margin-bottom: 25px;
+}
+
+.techs{
+  width: 220px;
+  height: 120px;
+}
+
+.tech-logo{
+  width: 90px;
+  height: 70px;
+}
+
+
+
+.main-stack{
+  width:600px;
+  height:300px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  /* border: rgb(20, 236, 239) solid 1px; */
+}
+.other-tech{
+  /* border: rgb(20, 236, 239) solid 1px; */
+  width:350px;
+  height:300px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:center;
 }
 
 main{
