--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 .App {
   text-align: center;
-  background-color: #041424;
+  background-color: #0a2239;
   height:2800px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   color:#ECFEFF ;
-  text-shadow: 0 0 6px #0A1A36, 0 0 8px #0A1A36;
+  text-shadow: 0 0 6px #0A1A36, 0 0 8px #071a3b;
+  font-family: 'Marhey', cursive;
+  overflow: scroll;
   }
 
 header{
@@ -16,9 +18,47 @@ header{
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
-  background-image: linear-gradient(to right, #0069D7, #203353,#2B3542);
+  background-image: linear-gradient(to right, #0069D7, #314567,#077988);
+  font-family: 'Concert One', cursive;
+  font-size: 45px;
+  padding-left: 45px;
+  border: #92c3f8 solid 3px;
 }
+
+h1{
+  margin-right: 100px;
+}
+
+.doublearrows {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  margin-top:-150px;
+  animation-name: glow;
+  animation-duration:1s;
+  animation-iteration-count: infinite;
+  
+
+} @keyframes glow {
+  from{
+     left: 50px;
+     top: 550px;
+  }
+  to{
+      left: 50px;
+      top: 575px;
+      
+  }
+}
+
+
+.bluearrows{
+  height: 50px;
+  transform:rotate(135deg);
+  margin-top: 20px;
+  z-index: 0;
+}
+
 
 section{
   height:300px;
@@ -27,7 +67,8 @@ section{
   background-color:#0069D7 ;
   align-items: center;
   justify-content: space-around;
-  border: rgb(20, 236, 239) solid 1px;
+  border: #92c3f8 solid 3px;
+  border-radius: 25px;
 }
 
 h3{
@@ -35,20 +76,23 @@ h3{
 }
 
 .techs{
-  width: 220px;
-  height: 120px;
+  width: 320px;
+  height: 150px;
 }
 
 .tech-logo{
-  width: 90px;
-  height: 70px;
+  width: 140px;
+  height: 100px;
 }
 
-
+.tech-logo-other{
+  width: 75px;
+  height: 60px;
+}
 
 .main-stack{
-  width:600px;
-  height:300px;
+  width:850px;
+  height:600px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -57,12 +101,12 @@ h3{
 }
 .other-tech{
   /* border: rgb(20, 236, 239) solid 1px; */
-  width:350px;
+  width:250px;
   height:300px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content:center;
+  justify-content:flex-start;
 }
 
 main{
@@ -89,6 +133,10 @@ main{
 #site-scrn{
   height: 300px;
   width: 500px;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  -moz-box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  -webkit-box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+
 }
 
 .contact{
