--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: #0a2239;
-  height:2800px;
+  height:2600px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -33,10 +33,11 @@ h1{
   display: flex;
   flex-direction: column;
   position: absolute;
-  margin-top:-150px;
+  margin-top:-330px;
   animation-name: glow;
   animation-duration:1s;
   animation-iteration-count: infinite;
+  margin-left: -20px;
   
 
 } @keyframes glow {
@@ -62,13 +63,15 @@ h1{
 
 section{
   height:300px;
-  width: 1200px;
+  width: 950px;
   display: flex;
   background-color:#0069D7 ;
   align-items: center;
   justify-content: space-around;
   border: #92c3f8 solid 3px;
   border-radius: 25px;
+  margin-right: -50px;
+
 }
 
 h3{
@@ -76,13 +79,13 @@ h3{
 }
 
 .techs{
-  width: 320px;
+  width: 250px;
   height: 150px;
 }
 
 .tech-logo{
-  width: 140px;
-  height: 100px;
+  width: 100px;
+  height: 75px;
 }
 
 .tech-logo-other{
@@ -91,7 +94,7 @@ h3{
 }
 
 .main-stack{
-  width:850px;
+  width:750px;
   height:600px;
   display: flex;
   flex-direction: row;
@@ -138,7 +141,7 @@ main{
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
-  width:1200px;
+  width:1100px;
   height: 500px;
   background-image: linear-gradient(to bottom right,#314567,#077988);
   border: black solid 1px;
@@ -192,13 +195,23 @@ h2:hover{
 
 .contact{
   width:90vw;
-  height: 340px;
+  height: 370px;
+  font-size: 30px;
   border: rgb(255, 35, 1) solid 1px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
 }
+
+.message{
+  width: 300px;
+}
+
+.form-group{
+padding: 10px;
+}
+
 .form-row{
   display: flex;
 }
