--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ h1{
   animation-name: glow;
   animation-duration:1s;
   animation-iteration-count: infinite;
-  margin-left: -20px;
+  margin-left: -20pxy;
   
 
 } @keyframes glow {
@@ -221,6 +221,9 @@ padding: 10px;
   display: flex;
 }
 @media (max-width:1000px) {
+  .App{
+    height:3200px;
+  }
   main{
     flex-direction: column;
   }
@@ -232,8 +235,12 @@ padding: 10px;
   section{
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
     height: 500px;
-    width:95vw;
+    width:90vw;
+    margin-left: -50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
 
   .techs{
@@ -249,6 +256,11 @@ padding: 10px;
   .tech-logo-other{
     width: 155px;
     height: 130px;
+  }
+
+  .project{
+width: 90vw;
+    
   }
 
   .divider{
