--- a/src/App.css
+++ b/src/App.css
@@ -226,8 +226,8 @@ padding: 10px;
   }
 
   h1{
-    font-size: large;
-    margin-right: 30px;
+    font-size: 40px;
+    margin-right: 40px;
   }
 
   main{
@@ -284,8 +284,8 @@ width: 90vw;
   }
   
   .tech-logo{
-    width: 100px;
-    height: 70px;
+    width: 80px;
+    height: 60px;
   }
   
   .tech-logo-other{
