--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: #0a2239;
-  height:2900px;
+  height:3800px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -33,7 +33,7 @@ h1{
   display: flex;
   flex-direction: column;
   position: absolute;
-  margin-top:-330px;
+  margin-top:-250px;
   animation-name: glow;
   animation-duration:1s;
   animation-iteration-count: infinite;
@@ -124,7 +124,7 @@ main{
 }
 
 .projects{
-  height:1800px;
+  height:2500px;
   width: 95vw;
   display: flex;
   flex-wrap: wrap;
@@ -198,6 +198,15 @@ a{
 
 }
 
+#site-scrn-phone{
+  height: 300px;
+  width: 200px;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  -moz-box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  -webkit-box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+
+}
+
 .contact{
   width:90vw;
   height: 370px;
@@ -220,9 +229,17 @@ padding: 10px;
 .form-row{
   display: flex;
 }
+@media (max-width:1100px) {
+  
+  .bluearrows{
+    display:none;
+    }
+
+  }
+
 @media (max-width:1000px) {
   .App{
-    height:3200px;
+    height:3800px;
   }
 
   h1{
@@ -232,10 +249,6 @@ padding: 10px;
 
   main{
     flex-direction: column;
-  }
-
-  .bluearrows{
-  display:none;
   }
   
   section{
