--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: #0a2239;
-  height:3800px;
+  height:2800px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -33,11 +33,11 @@ h1{
   display: flex;
   flex-direction: column;
   position: absolute;
-  margin-top:-250px;
+  margin-top:-320px;
   animation-name: glow;
   animation-duration:1s;
   animation-iteration-count: infinite;
-  margin-left: -20pxy;
+  margin-left: -10px;
   
 
 } @keyframes glow {
@@ -124,7 +124,7 @@ main{
 }
 
 .projects{
-  height:2500px;
+  height:1800px;
   width: 95vw;
   display: flex;
   flex-wrap: wrap;
